--- a/nft-minting-app-main/public/index.html
+++ b/nft-minting-app-main/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>CroDragon</title>
-    <meta name="CroDragon" content="Mint your Eggs" />
+    <meta name="CroDragons" content="Mint your Eggs" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
